WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115540
Fix build warnings on ResourceHandleClient.h
https://bugs.webkit.org/show_bug.cgi?id=115540
Summary
Fix build warnings on ResourceHandleClient.h
KyungTae Kim
Reported
2013-05-02 18:25:59 PDT
Comment out the parameter names for 'getOrCreateReadBuffer' to fix the below build warnings: Source/WebCore/platform/network/ResourceHandleClient.h:102:23: warning: unused parameter ‘actualLength’ [-Wunused-parameter] Source/WebCore/platform/network/ResourceHandleClient.h:102:23: warning: unused parameter ‘requestedLength’ [-Wunused-parameter] Because it's a header file, a lot of warnings are shown after it merged as
r149383
.
Attachments
Patch
(1.50 KB, patch)
2013-05-02 18:28 PDT
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
KyungTae Kim
Comment 1
2013-05-02 18:28:40 PDT
Created
attachment 200379
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-02 22:00:09 PDT
Comment on
attachment 200379
[details]
Patch Clearing flags on attachment: 200379 Committed
r149517
: <
http://trac.webkit.org/changeset/149517
>
WebKit Commit Bot
Comment 3
2013-05-02 22:00:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug