Fix build warnings on ResourceHandleClient.h https://bugs.webkit.org/show_bug.cgi?id=115540

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2013-05-02
Reviewed by Alexey Proskuryakov.

Comment out the parameter names for 'getOrCreateReadBuffer' to fix -Wunused-parameter build warnings.

* platform/network/ResourceHandleClient.h:
(WebCore::ResourceHandleClient::getOrCreateReadBuffer):

Canonical link: https://commits.webkit.org/133985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149517 268f45cc-cd09-0410-ab3c-d52691b4dbfc